style: add a a button to use a especific color

--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -7,3 +7,10 @@
 .header-color {
   background-color: #008CFF;
 }
+
+.effecti-button {
+  @extend .btn;
+  @extend .btn-primary;
+  background-color: #008CFF;
+  border-color: #008CFF;
+}
