Refactor project name and remove company name of code

--- a/src/assets/style/scss/index.scss
+++ b/src/assets/style/scss/index.scss
@@ -8,7 +8,7 @@
   background-color: #008CFF;
 }
 
-.effecti-button {
+.desafio-button {
   @extend .btn;
   @extend .btn-primary;
   background-color: #008CFF;
